<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/signInFragment">

    <fragment
        android:id="@+id/productPage"
        android:name="com.muhammedesadcomert.ecommerceapp.ui.product.ProductPageFragment"
        android:label="@string/product_page"
        tools:layout="@layout/fragment_product_page">
        <argument
            android:name="product"
            app:argType="com.muhammedesadcomert.ecommerceapp.model.Product" />
    </fragment>
    <fragment
        android:id="@+id/navigation_account"
        android:name="com.muhammedesadcomert.ecommerceapp.ui.account.Account"
        android:label="@string/account"
        tools:layout="@layout/fragment_account">
        <action
            android:id="@+id/action_account_to_accountSettings"
            app:destination="@id/navigation_account_settings" />
        <action
            android:id="@+id/action_account_to_addressesPage"
            app:destination="@id/navigation_address" />
        <action
            android:id="@+id/action_account_to_appSettings"
            app:destination="@id/navigation_app_settings" />
        <action
            android:id="@+id/action_account_to_favorites"
            app:destination="@id/navigation_favorites" />
    </fragment>
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.muhammedesadcomert.ecommerceapp.ui.home.Home"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_productPage"
            app:destination="@id/productPage" />
    </fragment>
    <fragment
        android:id="@+id/navigation_categories"
        android:name="com.muhammedesadcomert.ecommerceapp.ui.categories.Categories"
        android:label="@string/categories"
        tools:layout="@layout/fragment_categories">
        <action
            android:id="@+id/action_categories_to_home"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.muhammedesadcomert.ecommerceapp.ui.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />
    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.muhammedesadcomert.ecommerceapp.ui.cart.Cart"
        android:label="@string/shopping_cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_shopping_cart_to_productPage"
            app:destination="@id/productPage" />
    </fragment>
    <fragment
        android:id="@+id/navigation_account_settings"
        android:name="com.muhammedesadcomert.ecommerceapp.ui.account.AccountSettings"
        android:label="@string/account_settings"
        tools:layout="@layout/fragment_account_settings" />
    <fragment
        android:id="@+id/navigation_address"
        android:name="com.muhammedesadcomert.ecommerceapp.ui.address.Addresses"
        android:label="@string/addresses"
        tools:layout="@layout/fragment_addresses" />
    <fragment
        android:id="@+id/navigation_app_settings"
        android:name="com.muhammedesadcomert.ecommerceapp.ui.appsettings.AppSettings"
        android:label="@string/app_settings"
        tools:layout="@layout/fragment_app_settings" />
    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.muhammedesadcomert.ecommerceapp.ui.favorites.Favorites"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.muhammedesadcomert.ecommerceapp.ui.login.signin.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_signInFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.muhammedesadcomert.ecommerceapp.ui.login.signup.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_signUpFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/signInFragment" />
    </fragment>
</navigation>