<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="24dp"
    android:orientation="vertical"
    tools:context=".Account">

    <TextView
        android:id="@+id/store_account_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="4dp"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/store_account_settings"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/ic_account"
        app:drawableTint="@color/primaryColor" />

    <TextView
        android:id="@+id/app_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="4dp"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/app_settings"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/ic_settings"
        app:drawableTint="@color/primaryColor" />

    <TextView
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:drawablePadding="4dp"
        android:focusable="true"
        android:padding="8dp"
        android:text="@string/sign_out"
        android:textSize="24sp"
        app:drawableStartCompat="@drawable/ic_logout"
        app:drawableTint="@color/primaryColor" />

</LinearLayout>